package oodv4;

public class RecordingSession {
    public String recorderId;
    public void addVoice(VoiceMessage message) {}
    public String generateReplay() { return ""; }
}
