package oodv4;
import java.util.Map;

public class Trigger {
    public String name;
    public Map<String, Object> payload;
}
